# mask_classification

./: .env.dist  LICENSE  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
.github/workflows/: codestyle.yml
data/raw/: .gitignore  annotations.dvc  images.dvc  raw_data.dvc
docker/mlflow/: dockerfile
docs/: Makefile  conf.py  index.rst  make.bat
mlflow/: dockerfile
models/: .gitignore
notebooks/: basic_EDA.ipynb
src/data/: create_crop_dataset.py  download_dataset.py  make_dataset.py  mix_datasets.py
src/models/: train.py  train_test_split.py  trainer.py  validate.py
src/models/configs/: nn_config.yaml  resnet.yaml
tests/: test_crop_dataset.py  test_download_dataset.py  test_make_dataset.py  test_mix_dataset.py  test_train_test_split.py
tests/nn_config/: config.yaml
