[tool.poetry]
name = "mask_detection"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
dvc = {extras = ["s3"], version = "^2.10.2"}
click = "^8.1.3"
loguru = "^0.6.0"
opencv-python = "^4.5.5"
torch = "^1.11.0"
torchvision = "^0.12.0"
mlflow = "^1.26.0"
python-dotenv = "^0.20.0"
PyYAML = "^6.0"
pylint = "^2.13.9"
timm = "^0.5.4"

[tool.poetry.dev-dependencies]
pandas = "^1.4.2"
tqdm = "^4.64.0"
torchvision = "^0.12.0"
torch = "^1.11.0"
pytorch-lightning = "^1.6.3"
torchmetrics = "^0.8.2"
sklearn = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
